# hexchess

./: .gitignore  README.md  notes.md  package-lock.json  package.json
api/: Cargo.toml
api/src/: lib.rs
bumblebot/: Cargo.toml  playout_analysis.ipynb
bumblebot/src/: bot_mind.rs  lib.rs  main.rs  main2.rs  random_bot.rs  random_bot2.rs  sampling.py
docs/encoding/: encoding_board_state.md
docs/sampling/: notes.md  sampling.py
frontend/: build.bash  build.sh  package-lock.json  package.json
frontend/src/routes/: +page.svelte  assets.ts  board_state.ts  get_hexagon_position.ts  hexchess_logic.ts  message_parsing.ts
hexchess/: Cargo.toml
hexchess/hexchesscore/: Cargo.toml
hexchess/hexchesscore/src/: hexchesscore.rs  lib.rs  main.rs  moves.rs
hexchesscore/: Cargo.toml
hexchesscore/src/: board_representations.rs  hexchesscore.rs  lib.rs  moves.rs  starting_moves.json
server/: Cargo.toml  cert.pem  draw_hexagon.js  hello.html  hex_frontend_funcs.js  key.rsa  moves.json
server/server_files/: draw_hexagon.js  hello.html  hex_frontend_funcs.js  starting_moves.json
server/src/: debug.rs  lib.rs  main.rs  session_handling.rs  websocket_messaging.rs
