[package]
name = "bumblebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexchesscore = { path = "../hexchesscore"}
server = { path = "../server"}
rand = "0.8.5"
tungstenite = "*"
url = "2.4.1"
serde_json = "1.0.107"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4"
]
