[package]
name = "bumblebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexchesscore = { path = "../hexchesscore"}
api = { path = "../api"}
rand = "0.8.5"
rand_distr = "0.4.3"
tungstenite = "*"
url = "2.4.1"
serde_json = "1.0.107"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "*"

warp = "*"
futures = "*"


[dependencies.uuid]
version = "1.4.1"
features = [
    "v4"
]

[profile.release]
debug = true