[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "^0.20.0"
hexchesscore = { path = "../hexchess/hexchesscore"}
serde = {version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
openssl = "*"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4"
]