[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "^0.20.0"
hexchesscore = { path = "../hexchesscore"}
api = { path = "../api"}
serde = {version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
openssl = "*"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "*"
warp = "^0.3.5"
futures = "*"
url = "2.4.1"


[dependencies.uuid]
version = "1.4.1"
features = [
    "v4"
]